--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -29,7 +29,28 @@
       href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap"
     />
 
-    <title>React App</title>
+    <style>
+      body {
+        margin: 0;
+      }
+      /* width */
+      ::-webkit-scrollbar {
+        width: 8px;
+      }
+
+      /* Track */
+      ::-webkit-scrollbar-track {
+        border-radius: 10px;
+      }
+
+      /* Handle */
+      ::-webkit-scrollbar-thumb {
+        background: #1976d2;
+        border-radius: 4px;
+      }
+    </style>
+
+    <title>Dukaan</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
